# Lunch_menu

./: .App.py.swp  .gitignore  App.py  README.md  helpers.py  pyproject.toml
config/: db_config.py  test.py
helpers/: __init__.py  csv_manager.py  database.py  statistic_manager.py
note/: crud.ipynb  kwargs.ipynb  lunch_menu.csv  lunch_menu.ipynb
pages/: Bulk_insert.py  data.py  statistic.py
